[gd_scene load_steps=11 format=3 uid="uid://dbgvjj2tyxiyr"]

[ext_resource type="Script" path="res://src/platforming/scripts/Enemies/level_1/dragonfly_enemy.gd" id="1_64ip7"]
[ext_resource type="Texture2D" uid="uid://dew1bb7yjujq3" path="res://assets/Enemies/Free Enemies/Free Enemies/Anim/Dragonfly 1A[anim].png" id="2_1dtep"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jx8ke"]
radius = 132.442

[sub_resource type="CircleShape2D" id="CircleShape2D_ivw6h"]
radius = 149.215

[sub_resource type="Animation" id="Animation_tandr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dragonfly1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Battle_Collision/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-29, 21, -29, 24, -28, 24, -28, 27, -26, 27, -26, 28, -25, 28, -25, 29, -23, 29, -23, 30, -22, 30, -22, 31, -18, 31, -18, 32, -12, 32, -12, 31, -10, 31, -10, 30, -9, 30, -9, 29, -6, 29, -6, 31, -3, 31, -3, 30, -2, 30, -2, 29, 0, 29, 0, 24, 1, 24, 1, 22, 5, 22, 5, 23, 8, 23, 8, 24, 16, 24, 16, 23, 17, 23, 17, 22, 19, 22, 19, 21, 20, 21, 20, 19, 21, 19, 21, 15, 23, 15, 23, 5, 21, 5, 21, 2, 20, 2, 20, 0, 19, 0, 19, -1, 17, -1, 17, -4, 16, -4, 16, -5, 14, -5, 14, -6, 13, -6, 13, -7, 10, -7, 10, -8, 7, -8, 7, -9, 9, -9, 9, -10, 10, -10, 10, -11, 12, -11, 12, -14, 13, -14, 13, -15, 14, -15, 14, -19, 13, -19, 13, -22, 14, -22, 14, -26, 13, -26, 13, -29, 14, -29, 14, -38, 13, -38, 13, -40, 12, -40, 12, -41, 8, -41, 8, -38, 7, -38, 7, -35, 5, -35, 5, -31, 4, -31, 4, -26, 2, -26, 2, -24, 1, -24, 1, -22, 0, -22, 0, -19, -1, -19, -2, -18, -3, -18, -3, -26, -4, -26, -4, -33, -6, -33, -6, -36, -7, -36, -7, -38, -10, -38, -10, -30, -9, -30, -9, -21, -7, -21, -7, -11, -6, -11, -6, -9, -7, -9, -7, -8, -12, -8, -12, -7, -15, -7, -15, -6, -16, -6, -16, -5, -18, -5, -18, -4, -19, -4, -19, -3, -20, -3, -20, 0, -18, 0, -17, 1, -12, 1, -12, 3, -10, 3, -10, 5, -15, 5, -15, 4, -18, 4, -19, 3, -21, 3, -22, 2, -25, 2, -26, 3, -28, 5, -28, 13, -26, 15, -25, 17, -23, 18, -22, 20, -19, 20, -19, 19, -18, 19, -18, 17, -19, 16, -19, 11, -17, 11, -17, 10, -12, 10, -12, 11, -4, 11, -4, 10, -3, 10, -3, 6, -4, 6, -4, 2, -3, 2, -3, 1, 1, 1, 1, 0, 10, 0, 10, 1, 13, 1, 13, 3, 14, 5, 16, 10, 17, 10, 17, 16, 16, 16, 16, 20, 14, 20, 14, 21, 10, 21, 10, 20, 7, 20, 7, 19, 0, 19, 0, 20, -1, 20, -2, 21, -3, 21, -3, 22, -4, 22, -4, 23, -7, 23, -7, 22, -10, 22, -10, 25, -13, 25, -13, 26, -17, 26, -17, 25, -20, 25, -20, 24, -23, 24, -23, 23, -24, 23, -24, 22, -26, 22, -26, 21)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Battle_Collision/CollisionPolygon2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Dragonfly1:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 0)]
}

[sub_resource type="Animation" id="Animation_2t4bf"]
resource_name = "flying_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dragonfly1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_qax61"]
resource_name = "flying_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dragonfly1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_yes03"]
resource_name = "idle_left"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dragonfly1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Battle_Collision/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [PackedVector2Array(-29, 21, -29, 24, -28, 24, -28, 27, -26, 28, -25, 29, -23, 30, -22, 31, -18, 31, -18, 32, -12, 32, -10, 31, -9, 30, -9, 29, -6, 29, -6, 31, -3, 31, -2, 30, 0, 29, 1, 24, 1, 22, 5, 22, 5, 23, 8, 24, 16, 24, 17, 23, 19, 22, 20, 21, 21, 19, 23, 15, 23, 5, 21, 2, 20, 0, 19, -1, 17, -4, 16, -5, 14, -6, 13, -7, 10, -8, 9, -9, 9, -10, 10, -10, 12, -11, 12, -14, 13, -14, 14, -15, 14, -19, 14, -22, 14, -26, 13, -26, 13, -29, 14, -29, 14, -38, 13, -38, 13, -40, 12, -41, 8, -41, 7, -38, 7, -35, 5, -35, 5, -31, 4, -31, 4, -26, 2, -26, 2, -24, 1, -24, 1, -22, 0, -22, 0, -19, -1, -19, -2, -18, -3, -18, -3, -26, -4, -26, -4, -33, -6, -33, -6, -36, -7, -36, -7, -38, -10, -38, -10, -30, -9, -30, -9, -21, -7, -21, -7, -11, -6, -11, -6, -9, -7, -9, -12, -8, -12, -7, -15, -7, -16, -6, -18, -5, -19, -4, -20, -3, -20, 0, -22, 2, -25, 2, -26, 3, -28, 5, -28, 13, -26, 15, -25, 17, -26, 21), PackedVector2Array(-33, 20, -33, 23, -32, 23, -32, 27, -28, 30, -23, 30, -23, 31, -20, 31, -20, 32, -17, 32, -15, 30, -12, 31, -9, 31, -4, 27, -4, 24, 1, 24, 9, 24, 9, 23, 12, 23, 15, 20, 16, 20, 16, 18, 17, 18, 17, 16, 19, 15, 19, 10, 20, 10, 20, 4, 19, 4, 19, 0, 11, -7, 9, -7, 9, -9, 10, -9, 10, -11, 11, -11, 11, -15, 13, -15, 14, -16, 20, -25, 20, -27, 22, -27, 22, -29, 23, -29, 23, -34, 20, -34, 14, -29, 14, -27, 13, -27, 13, -26, 11, -26, 1, -16, -4, -15, -25, -34, -28, -34, -28, -30, -26, -30, -26, -28, -25, -28, -25, -27, -9, -11, -7, -10, -7, -9, -9, -9, -18, -6, -22, -2, -22, -1, -20, 0, -20, 1, -22, 3, -26, 3, -29, 5, -29, 9, -28, 9, -28, 14, -29, 21, -30, 21, -30, 20), PackedVector2Array(-29, 21, -29, 24, -28, 24, -28, 27, -26, 28, -25, 29, -23, 30, -22, 31, -18, 31, -18, 32, -12, 32, -10, 31, -9, 30, -9, 29, -6, 29, -6, 31, -3, 31, -2, 30, 0, 29, 1, 24, 1, 22, 5, 22, 5, 23, 8, 24, 16, 24, 17, 23, 19, 22, 20, 21, 21, 19, 23, 15, 23, 5, 21, 2, 20, 0, 19, -1, 17, -4, 16, -5, 14, -6, 13, -7, 10, -8, 9, -9, 9, -10, 10, -10, 12, -11, 12, -14, 13, -14, 14, -15, 14, -19, 14, -22, 14, -26, 13, -26, 13, -29, 14, -29, 14, -38, 13, -38, 13, -40, 12, -41, 8, -41, 7, -38, 7, -35, 5, -35, 5, -31, 4, -31, 4, -26, 2, -26, 2, -24, 1, -24, 1, -22, 0, -22, 0, -19, -1, -19, -2, -18, -3, -18, -3, -26, -4, -26, -4, -33, -6, -33, -6, -36, -7, -36, -7, -38, -10, -38, -10, -30, -9, -30, -9, -21, -7, -21, -7, -11, -6, -11, -6, -9, -7, -9, -12, -8, -12, -7, -15, -7, -16, -6, -18, -5, -19, -4, -20, -3, -20, 0, -22, 2, -25, 2, -26, 3, -28, 5, -28, 13, -26, 15, -25, 17, -26, 21), PackedVector2Array(-25, 20, -25, 23, -23, 23, -23, 24, -16, 30, -12, 30, -12, 31, -9, 31, -9, 30, -6, 30, -3, 27, 0, 27, 0, 27, 1, 29, 4, 29, 4, 26, 6, 26, 6, 21, 8, 21, 15, 24, 20, 24, 23, 22, 23, 19, 25, 19, 25, 14, 26, 14, 26, 4, 22, 0, 19, -2, 19, -4, 14, -7, 12, -7, 12, -9, 13, -9, 13, -11, 15, -11, 15, -15, 18, -18, 19, -18, 25, -27, 25, -29, 26, -29, 26, -34, 23, -34, 20, -32, 17, -29, 16, -27, 13, -25, 12, -23, 9, -21, 7, -20, 7, -18, 5, -18, 1, -14, 0, -15, -10, -22, -10, -24, -12, -25, -13, -26, -15, -27, -16, -27, -16, -29, -24, -34, -25, -34, -25, -30, -23, -30, -23, -28, -20, -27, -20, -26, -19, -25, -16, -21, -16, -20, -15, -20, -14, -19, -10, -15, -5, -11, -5, -9, -6, -9, -6, -8, -11, -8, -16, -5, -19, -3, -20, 1, -23, 1, -25, 2, -26, 4, -26, 8, -27, 8, -27, 15, -25, 18)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Battle_Collision/CollisionPolygon2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Dragonfly1:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_3hrah"]
resource_name = "idle_right"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dragonfly1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Battle_Collision/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [PackedVector2Array(-29, 21, -29, 24, -28, 24, -28, 27, -26, 27, -26, 28, -25, 28, -25, 29, -23, 29, -23, 30, -22, 30, -22, 31, -18, 31, -18, 32, -12, 32, -12, 31, -10, 31, -10, 30, -9, 30, -9, 29, -6, 29, -6, 31, -3, 31, -3, 30, -2, 30, -2, 29, 0, 29, 0, 24, 1, 24, 1, 22, 5, 22, 5, 23, 8, 23, 8, 24, 16, 24, 16, 23, 17, 23, 17, 22, 19, 22, 19, 21, 20, 21, 20, 19, 21, 19, 21, 15, 23, 15, 23, 5, 21, 5, 21, 2, 20, 2, 20, 0, 19, 0, 19, -1, 17, -1, 17, -4, 16, -4, 16, -5, 14, -5, 14, -6, 13, -6, 13, -7, 10, -7, 10, -8, 7, -8, 7, -9, 9, -9, 9, -10, 10, -10, 10, -11, 12, -11, 12, -14, 13, -14, 13, -15, 14, -15, 14, -19, 13, -19, 13, -22, 14, -22, 14, -26, 13, -26, 13, -29, 14, -29, 14, -38, 13, -38, 13, -40, 12, -40, 12, -41, 8, -41, 8, -38, 7, -38, 7, -35, 5, -35, 5, -31, 4, -31, 4, -26, 2, -26, 2, -24, 1, -24, 1, -22, 0, -22, 0, -19, -1, -19, -2, -18, -3, -18, -3, -26, -4, -26, -4, -33, -6, -33, -6, -36, -7, -36, -7, -38, -10, -38, -10, -30, -9, -30, -9, -21, -7, -21, -7, -11, -6, -11, -6, -9, -7, -9, -7, -8, -12, -8, -12, -7, -15, -7, -15, -6, -16, -6, -16, -5, -18, -5, -18, -4, -19, -4, -19, -3, -20, -3, -20, 0, -18, 0, -17, 1, -12, 1, -12, 3, -10, 3, -10, 5, -15, 5, -15, 4, -18, 4, -19, 3, -21, 3, -22, 2, -25, 2, -26, 3, -28, 5, -28, 13, -26, 15, -25, 17, -23, 18, -22, 20, -19, 20, -19, 19, -18, 19, -18, 17, -19, 16, -19, 11, -17, 11, -17, 10, -12, 10, -12, 11, -4, 11, -4, 10, -3, 10, -3, 6, -4, 6, -4, 2, -3, 2, -3, 1, 1, 1, 1, 0, 10, 0, 10, 1, 13, 1, 13, 3, 14, 5, 16, 10, 17, 10, 17, 16, 16, 16, 16, 20, 14, 20, 14, 21, 10, 21, 10, 20, 7, 20, 7, 19, 0, 19, 0, 20, -1, 20, -2, 21, -3, 21, -3, 22, -4, 22, -4, 23, -7, 23, -7, 22, -10, 22, -10, 25, -13, 25, -13, 26, -17, 26, -17, 25, -20, 25, -20, 24, -23, 24, -23, 23, -24, 23, -24, 22, -26, 22, -26, 21), PackedVector2Array(-33, 20, -33, 23, -32, 23, -32, 27, -31, 27, -31, 28, -29, 28, -29, 29, -28, 29, -28, 30, -23, 30, -23, 31, -20, 31, -20, 32, -17, 32, -17, 31, -16, 31, -16, 30, -15, 30, -15, 29, -12, 29, -12, 31, -9, 31, -9, 30, -7, 30, -7, 29, -6, 29, -6, 27, -4, 27, -4, 24, -3, 24, -3, 23, 1, 23, 1, 24, 9, 24, 9, 23, 12, 23, 12, 22, 13, 22, 13, 21, 14, 21, 15, 20, 16, 20, 16, 18, 17, 18, 17, 16, 19, 15, 19, 10, 20, 10, 20, 4, 19, 4, 19, 0, 17, 0, 17, -2, 16, -3, 16, -4, 14, -4, 14, -5, 13, -5, 13, -6, 12, -6, 11, -7, 9, -7, 9, -9, 10, -9, 10, -11, 11, -11, 11, -15, 13, -15, 13, -16, 14, -16, 14, -18, 16, -18, 16, -20, 17, -20, 17, -23, 19, -23, 19, -25, 20, -25, 20, -27, 22, -27, 22, -29, 23, -29, 23, -34, 20, -34, 20, -32, 19, -32, 19, -31, 17, -31, 17, -30, 16, -30, 16, -29, 14, -29, 14, -27, 13, -27, 13, -26, 11, -26, 11, -25, 10, -25, 10, -23, 9, -23, 9, -21, 7, -21, 6, -20, 4, -18, 3, -17, 1, -16, 0, -15, -2, -15, -2, -14, -3, -14, -3, -15, -4, -15, -5, -15, -5, -16, -6, -16, -6, -17, -7, -17, -7, -18, -9, -18, -9, -19, -10, -20, -12, -21, -13, -23, -15, -25, -16, -26, -17, -27, -19, -29, -21, -31, -22, -32, -24, -33, -25, -34, -28, -34, -28, -30, -26, -30, -26, -28, -25, -28, -25, -27, -23, -26, -22, -25, -20, -23, -19, -21, -18, -20, -16, -19, -14, -17, -12, -15, -11, -13, -9, -11, -7, -10, -7, -9, -9, -9, -12, -8, -12, -7, -16, -7, -16, -6, -18, -6, -18, -5, -19, -5, -19, -4, -20, -4, -21, -3, -22, -2, -22, -1, -20, 0, -20, 1, -13, 1, -13, 4, -22, 4, -22, 3, -26, 3, -26, 4, -27, 4, -28, 5, -29, 5, -29, 9, -28, 9, -28, 14, -26, 15, -26, 17, -24, 19, -23, 20, -20, 20, -20, 19, -16, 19, -16, 17, -17, 16, -19, 15, -19, 14, -20, 14, -20, 12, -19, 12, -19, 11, -12, 11, -12, 12, -9, 12, -9, 10, -3, 10, -3, 6, -4, 6, -4, 3, -6, 3, -6, 2, -3, 2, -3, 1, 1, 1, 2, 0, 9, 0, 9, 1, 11, 1, 11, 4, 13, 4, 13, 16, 12, 16, 11, 19, 10, 19, 9, 20, 8, 21, 1, 21, 1, 20, -6, 20, -6, 21, -7, 21, -7, 22, -8, 22, -9, 23, -10, 23, -10, 22, -13, 22, -13, 23, -15, 23, -15, 25, -15, 25, -22, 25, -22, 24, -24, 24, -24, 23, -27, 23, -27, 22, -29, 22, -29, 21, -30, 21, -30, 20), PackedVector2Array(-29, 21, -29, 24, -28, 24, -28, 27, -26, 27, -26, 28, -25, 28, -25, 29, -23, 29, -23, 30, -22, 30, -22, 31, -18, 31, -18, 32, -12, 32, -12, 31, -10, 31, -10, 30, -9, 30, -9, 29, -6, 29, -6, 31, -3, 31, -3, 30, -2, 30, -2, 29, 0, 29, 0, 24, 1, 24, 1, 22, 5, 22, 5, 23, 8, 23, 8, 24, 16, 24, 16, 23, 17, 23, 17, 22, 19, 22, 19, 21, 20, 21, 20, 19, 21, 19, 21, 15, 23, 15, 23, 5, 21, 5, 21, 2, 20, 2, 20, 0, 19, 0, 19, -1, 17, -1, 17, -4, 16, -4, 16, -5, 14, -5, 14, -6, 13, -6, 13, -7, 10, -7, 10, -8, 7, -8, 7, -9, 9, -9, 9, -10, 10, -10, 10, -11, 12, -11, 12, -14, 13, -14, 13, -15, 14, -15, 14, -19, 13, -19, 13, -22, 14, -22, 14, -26, 13, -26, 13, -29, 14, -29, 14, -38, 13, -38, 13, -40, 12, -40, 12, -41, 8, -41, 8, -38, 7, -38, 7, -35, 5, -35, 5, -31, 4, -31, 4, -26, 2, -26, 2, -24, 1, -24, 1, -22, 0, -22, 0, -19, -1, -19, -2, -18, -3, -18, -3, -26, -4, -26, -4, -33, -6, -33, -6, -36, -7, -36, -7, -38, -10, -38, -10, -30, -9, -30, -9, -21, -7, -21, -7, -11, -6, -11, -6, -9, -7, -9, -7, -8, -12, -8, -12, -7, -15, -7, -15, -6, -16, -6, -16, -5, -18, -5, -18, -4, -19, -4, -19, -3, -20, -3, -20, 0, -18, 0, -17, 1, -12, 1, -12, 3, -10, 3, -10, 5, -15, 5, -15, 4, -18, 4, -19, 3, -21, 3, -22, 2, -25, 2, -26, 3, -28, 5, -28, 13, -26, 15, -25, 17, -23, 18, -22, 20, -19, 20, -19, 19, -18, 19, -18, 17, -19, 16, -19, 11, -17, 11, -17, 10, -12, 10, -12, 11, -4, 11, -4, 10, -3, 10, -3, 6, -4, 6, -4, 2, -3, 2, -3, 1, 1, 1, 1, 0, 10, 0, 10, 1, 13, 1, 13, 3, 14, 5, 16, 10, 17, 10, 17, 16, 16, 16, 16, 20, 14, 20, 14, 21, 10, 21, 10, 20, 7, 20, 7, 19, 0, 19, 0, 20, -1, 20, -2, 21, -3, 21, -3, 22, -4, 22, -4, 23, -7, 23, -7, 22, -10, 22, -10, 25, -13, 25, -13, 26, -17, 26, -17, 25, -20, 25, -20, 24, -23, 24, -23, 23, -24, 23, -24, 22, -26, 22, -26, 21), PackedVector2Array(-25, 20, -25, 23, -23, 23, -23, 24, -22, 24, -22, 25, -20, 26, -20, 26, -19, 27, -17, 28, -16, 30, -12, 30, -12, 31, -9, 31, -9, 30, -6, 30, -6, 29, -4, 29, -4, 28, -3, 28, -3, 27, 0, 27, 0, 27, 0, 28, 1, 28, 1, 29, 4, 29, 4, 26, 6, 26, 6, 21, 8, 21, 9, 22, 12, 23, 15, 24, 20, 24, 20, 23, 22, 23, 22, 22, 23, 22, 23, 19, 25, 19, 25, 14, 26, 14, 26, 4, 24, 4, 24, 2, 23, 2, 23, 1, 22, 1, 22, 0, 20, 0, 20, -1, 19, -2, 19, -4, 17, -4, 17, -5, 16, -6, 14, -7, 12, -7, 12, -9, 13, -9, 13, -11, 15, -11, 15, -15, 16, -15, 16, -16, 18, -16, 18, -18, 19, -18, 19, -20, 20, -20, 20, -23, 22, -23, 22, -25, 23, -25, 23, -27, 25, -27, 25, -29, 26, -29, 26, -34, 23, -34, 23, -33, 22, -33, 22, -32, 20, -32, 20, -31, 19, -31, 19, -29, 17, -29, 17, -27, 16, -27, 16, -26, 14, -26, 14, -25, 13, -25, 13, -23, 12, -23, 12, -22, 10, -22, 10, -21, 9, -21, 9, -20, 7, -20, 7, -18, 5, -18, 5, -17, 4, -17, 4, -16, 3, -16, 3, -15, 2, -15, 1, -14, 0, -14, 0, -15, -1, -15, -2, -16, -3, -17, -5, -18, -6, -19, -8, -20, -9, -21, -10, -22, -10, -24, -12, -24, -12, -25, -13, -25, -13, -26, -14, -26, -15, -27, -16, -27, -16, -29, -17, -29, -18, -30, -19, -31, -21, -32, -22, -33, -24, -34, -25, -34, -25, -30, -23, -30, -23, -28, -22, -28, -22, -27, -20, -27, -20, -26, -19, -25, -18, -23, -18, -23, -16, -21, -16, -20, -15, -20, -14, -19, -13, -18, -12, -17, -10, -15, -9, -13, -7, -12, -5, -11, -5, -9, -6, -9, -6, -8, -11, -8, -12, -7, -13, -7, -13, -6, -14, -6, -15, -5, -16, -5, -16, -4, -17, -4, -17, -3, -19, -3, -19, 0, -15, 0, -15, 1, -10, 1, -10, 3, -14, 3, -14, 2, -20, 2, -20, 1, -23, 1, -23, 2, -25, 2, -25, 4, -26, 4, -26, 8, -27, 8, -27, 15, -25, 16, -25, 18, -24, 18, -22, 18, -22, 15, -20, 15, -20, 16, -19, 17, -14, 17, -14, 15, -16, 15, -16, 14, -16, 14, -17, 14, -17, 9, -13, 9, -13, 10, -9, 10, -9, 11, -6, 11, -6, 10, -5, 10, -4, 7, -3, 7, -3, 1, 1, 1, 2, 0, 11, 0, 11, 1, 14, 1, 15, 2, 16, 3, 17, 4, 19, 5, 19, 8, 20, 9, 20, 16, 19, 16, 19, 21, 15, 21, 14, 20, 12, 19, 10, 18, 3, 18, 2, 19, 0, 20, -1, 21, -3, 21, -3, 20, -6, 20, -6, 23, -7, 23, -8, 24, -9, 24, -9, 25, -12, 25, -12, 24, -16, 24, -16, 23, -19, 23, -19, 22, -20, 22, -20, 21, -22, 21, -22, 20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Battle_Collision/CollisionPolygon2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Dragonfly1:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ppcwo"]
_data = {
"RESET": SubResource("Animation_tandr"),
"flying_left": SubResource("Animation_2t4bf"),
"flying_right": SubResource("Animation_qax61"),
"idle_left": SubResource("Animation_yes03"),
"idle_right": SubResource("Animation_3hrah")
}

[node name="flying_enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_64ip7")

[node name="Dragonfly1" type="Sprite2D" parent="."]
position = Vector2(-3, -7)
scale = Vector2(1.44687, 1.11719)
texture = ExtResource("2_1dtep")
offset = Vector2(4, 0)
hframes = 4
vframes = 14

[node name="Battle_Collision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Battle_Collision"]
polygon = PackedVector2Array(-29, 21, -29, 24, -28, 24, -28, 27, -26, 27, -26, 28, -25, 28, -25, 29, -23, 29, -23, 30, -22, 30, -22, 31, -18, 31, -18, 32, -12, 32, -12, 31, -10, 31, -10, 30, -9, 30, -9, 29, -6, 29, -6, 31, -3, 31, -3, 30, -2, 30, -2, 29, 0, 29, 0, 24, 1, 24, 1, 22, 5, 22, 5, 23, 8, 23, 8, 24, 16, 24, 16, 23, 17, 23, 17, 22, 19, 22, 19, 21, 20, 21, 20, 19, 21, 19, 21, 15, 23, 15, 23, 5, 21, 5, 21, 2, 20, 2, 20, 0, 19, 0, 19, -1, 17, -1, 17, -4, 16, -4, 16, -5, 14, -5, 14, -6, 13, -6, 13, -7, 10, -7, 10, -8, 7, -8, 7, -9, 9, -9, 9, -10, 10, -10, 10, -11, 12, -11, 12, -14, 13, -14, 13, -15, 14, -15, 14, -19, 13, -19, 13, -22, 14, -22, 14, -26, 13, -26, 13, -29, 14, -29, 14, -38, 13, -38, 13, -40, 12, -40, 12, -41, 8, -41, 8, -38, 7, -38, 7, -35, 5, -35, 5, -31, 4, -31, 4, -26, 2, -26, 2, -24, 1, -24, 1, -22, 0, -22, 0, -19, -1, -19, -2, -18, -3, -18, -3, -26, -4, -26, -4, -33, -6, -33, -6, -36, -7, -36, -7, -38, -10, -38, -10, -30, -9, -30, -9, -21, -7, -21, -7, -11, -6, -11, -6, -9, -7, -9, -7, -8, -12, -8, -12, -7, -15, -7, -15, -6, -16, -6, -16, -5, -18, -5, -18, -4, -19, -4, -19, -3, -20, -3, -20, 0, -18, 0, -17, 1, -12, 1, -12, 3, -10, 3, -10, 5, -15, 5, -15, 4, -18, 4, -19, 3, -21, 3, -22, 2, -25, 2, -26, 3, -28, 5, -28, 13, -26, 15, -25, 17, -23, 18, -22, 20, -19, 20, -19, 19, -18, 19, -18, 17, -19, 16, -19, 11, -17, 11, -17, 10, -12, 10, -12, 11, -4, 11, -4, 10, -3, 10, -3, 6, -4, 6, -4, 2, -3, 2, -3, 1, 1, 1, 1, 0, 10, 0, 10, 1, 13, 1, 13, 3, 14, 5, 16, 10, 17, 10, 17, 16, 16, 16, 16, 20, 14, 20, 14, 21, 10, 21, 10, 20, 7, 20, 7, 19, 0, 19, 0, 20, -1, 20, -2, 21, -3, 21, -3, 22, -4, 22, -4, 23, -7, 23, -7, 22, -10, 22, -10, 25, -13, 25, -13, 26, -17, 26, -17, 25, -20, 25, -20, 24, -23, 24, -23, 23, -24, 23, -24, 22, -26, 22, -26, 21)

[node name="PlayerDetected" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetected"]
shape = SubResource("CircleShape2D_jx8ke")
debug_color = Color(1, 0, 0, 0.419608)

[node name="PlayerLost" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLost"]
shape = SubResource("CircleShape2D_ivw6h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle_left"
libraries = {
"": SubResource("AnimationLibrary_ppcwo")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="MovementTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Battle_Collision" to="." method="_on_battle_collision_body_entered"]
[connection signal="body_entered" from="PlayerDetected" to="." method="_on_player_detected_body_entered"]
[connection signal="body_exited" from="PlayerLost" to="." method="_on_player_lost_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
